# uav-backend

./: .env  .gitignore  Cargo.toml
scripts/: init.sql  sea-orm-cli.sh  uav.db
src/: app.rs  main.rs
src/api/: drone.rs  events.rs  incident.rs  logs.rs  mission.rs  mod.rs  user.rs
src/common/: logger.rs  mod.rs  page.rs  response.rs  result.rs  server.rs
src/entity/: drones.rs  events.rs  incidents.rs  logs.rs  missions.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  users.rs
